new version of component
bug fixes.
added header for OrgName for authentication.
removed unused endpoints
refactored service classes
scoped entities
added support for multitenacy