@@ -1,12 +1,12 @@
 package com.example.hiringProcess.Department;
 
-import jakarta.transaction.Transactional;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
+
 
 @Service
 public class DepartmentService {
@@ -21,62 +21,81 @@ public class DepartmentService {
         this.departmentMapper = departmentMapper;
     }
 
-    public List<Department> getDepartments() {
-        return departmentRepository.findAll();
-    }
 
-    public List<DepartmentNameDTO> getDepartmentNames() {
-        return departmentRepository.findAll()
+    public List<DepartmentNameDTO> getDepartmentNamesByOrg(Integer orgId) {
+        return departmentRepository.findByOrganisationId(orgId)
                 .stream()
-                .map(departmentMapper::toNameDTO)
-                .toList();
+                .map(dept -> new DepartmentNameDTO(dept.getId(), dept.getName()))
+                .collect(Collectors.toList());
     }
 
-    public Optional<Department> getDepartment(Integer departmentId) {
-        return departmentRepository.findById(departmentId);
+    public Optional<Department> getDepartmentByOrg(Integer orgId, Integer id) {
+        return departmentRepository.findByIdAndOrganisationId(id, orgId);
     }
 
-    public Department addNewDepartment(Department department) {
-        department.setId(0); // force insert
-        return departmentRepository.save(department);
+
+    public boolean existsByOrg(Integer deptId, Integer orgId) {
+        return departmentRepository.existsByIdAndOrganisationId(deptId, orgId);
     }
 
-    @Transactional
-    public void deleteDepartment(Integer departmentId) {
-        Department department = departmentRepository.findById(departmentId)
-                .orElseThrow(() -> new IllegalStateException("Department with id " + departmentId + " does not exist"));
+//    public List<Department> getDepartments() {
+//        return departmentRepository.findAll();
+//    }
+//
+//    public List<DepartmentNameDTO> getDepartmentNames() {
+//        return departmentRepository.findAll()
+//                .stream()
+//                .map(departmentMapper::toNameDTO)
+//                .toList();
+//    }
+//
+//    public Optional<Department> getDepartment(Integer departmentId) {
+//        return departmentRepository.findById(departmentId);
+//    }
+//
+//    public Department addNewDepartment(Department department) {
+//        department.setId(0); // force insert
+//        return departmentRepository.save(department);
+//    }
+//
+//    @Transactional
+//    public void deleteDepartment(Integer departmentId) {
+//        Department department = departmentRepository.findById(departmentId)
+//                .orElseThrow(() -> new IllegalStateException("Department with id " + departmentId + " does not exist"));
+//
+//        // Αποσύνδεση σχέσεων
+//        department.getJobAds().forEach(jobAd -> jobAd.getDepartments().remove(department));
+//        department.setOrganisation(null);
+//
+//        departmentRepository.delete(department);
+//    }
+//
+//    @Transactional
+//    public Department updateDepartment(Integer departmentId, Department updatedFields) {
+//        Department department = departmentRepository.findById(departmentId)
+//                .orElseThrow(() -> new IllegalStateException(
+//                        "Department with id " + departmentId + " does not exist"));
+//
+//        if (updatedFields.getName() != null &&
+//                !updatedFields.getName().isEmpty() &&
+//                !Objects.equals(department.getName(), updatedFields.getName())) {
+//            department.setName(updatedFields.getName());
+//        }
+//
+//        if (updatedFields.getLocation() != null &&
+//                !updatedFields.getLocation().isEmpty() &&
+//                !Objects.equals(department.getLocation(), updatedFields.getLocation())) {
+//            department.setLocation(updatedFields.getLocation());
+//        }
+//
+//        if (updatedFields.getDescription() != null &&
+//                !updatedFields.getDescription().isEmpty() &&
+//                !Objects.equals(department.getDescription(), updatedFields.getDescription())) {
+//            department.setDescription(updatedFields.getDescription());
+//        }
+//
+//        return department;
+//    }
 
-        // Αποσύνδεση σχέσεων
-        department.getJobAds().forEach(jobAd -> jobAd.getDepartments().remove(department));
-        department.setOrganisation(null);
 
-        departmentRepository.delete(department);
-    }
-
-    @Transactional
-    public Department updateDepartment(Integer departmentId, Department updatedFields) {
-        Department department = departmentRepository.findById(departmentId)
-                .orElseThrow(() -> new IllegalStateException(
-                        "Department with id " + departmentId + " does not exist"));
-
-        if (updatedFields.getName() != null &&
-                !updatedFields.getName().isEmpty() &&
-                !Objects.equals(department.getName(), updatedFields.getName())) {
-            department.setName(updatedFields.getName());
-        }
-
-        if (updatedFields.getLocation() != null &&
-                !updatedFields.getLocation().isEmpty() &&
-                !Objects.equals(department.getLocation(), updatedFields.getLocation())) {
-            department.setLocation(updatedFields.getLocation());
-        }
-
-        if (updatedFields.getDescription() != null &&
-                !updatedFields.getDescription().isEmpty() &&
-                !Objects.equals(department.getDescription(), updatedFields.getDescription())) {
-            department.setDescription(updatedFields.getDescription());
-        }
-
-        return department;
-    }
 }
